<resources>
    <string name="app_name">SendBy</string>

    <string name="movie">Video</string>
    <string name="music">Music</string>
    <string name="photo">Photo</string>
    <string name="doc">Doc</string>
    <string name="apk">Apk</string>
    <string name="archive">Archive</string>

    <string name="wifi">WIFI</string>
    <string name="hotspot">Hotspot</string>
    <string name="edit_name">"Edit Name"</string>
    <string name="loading">LOADING</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="open_by_others">Open by other app</string>
    <string name="delete">delete</string>
    <string name="name_too_long">name is too long</string>
    <string name="no_permission">No Permission</string>
    <string name="failure">fail</string>
    <string name="title_activity_settings">Settings</string>

    <string name="client_has_not_yet_ready_try_later">Not ready yet. Please try again later.</string>
    <string name="details">Detailed information</string>
    <string name="positive">Positive</string>
    <string name="cancel">Cancel</string>
    <string name="select_success">Select success</string>

    <string name="pick_from_camera">Selection from camera </string>
    <string name="pick_from_album">Select from the album</string>
    <string name="need_wifi_or_hotspot">Need to connect to WIFI or turn on hot spots</string>
    <string name="cellular">Cellular</string>
    <string name="no_internet">"No Internet"</string>

    <string name="exit">Exit</string>
    <string name="faq">FAQ</string>
    <string name="setting">Setting</string>
    <string name="help">Help</string>
    <string name="feedback">Feedback</string>
    <string name="name_with_colon">Name:</string>
    <string name="password_with_colon">Password:</string>
    <string name="ip_with_colon">Ip:</string>
    <string name="qr_code">QRCode</string>
    <string name="use_browser_scanning_qr_code_to_connect">Scanning QR codes with browsers to connect hot spots:</string>
    <string name="web">Web</string>
    <string name="use_browser_scanning_qr_code_to_enter">Scanning QR codes into a web page with a browser:</string>
    <string name="edit">Edit</string>
    <string name="name">name</string>
    <string name="select_file">Select the file</string>
    <string name="view_help">View Help</string>
    <string name="no_server_connect_to_another_wifi">No server,connect to another wifi</string>
    <string name="also_you_can_share_videos">Also,you can share videos</string>
    <string name="clear_cache">Clear cache</string>
    <string name="do_you_want_to_clear_the_cache">Do you want to clear the cache?</string>
    <string name="you_will_clear_cache">you will clear %s cache</string>

    <string name="installed">Installed</string>

    <string name="use_last">Using last</string>
    <string name="go_to_setting">Jump to settings</string>

    <string name="warning">Warning</string>
    <string name="authorization_is_required">Authorization is required for normal use</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">KerriGan</string>

    <string name="key_device_name">device_name</string>
    <string name="key_clear_cache">clear_cache</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="key_notification_message_ringtone">notifications_new_message_ringtone</string>
    <string name="key_default_notification_message_ringtone">"content://settings/system/notification_sound"</string>
    <string name="key_notification_vibrate">notifications_new_message_vibrate</string>
    <string name="key_notification_on">notifications_new_message</string>


    <string name="pref_permission">Permission</string>

    <string name="searched_new_device">Searched new device</string>
    <string name="find_new_device">Find new device</string>
    <string name="searched_by_ip">Searched by ip</string>
    <string name="click_to_exit_app">Double click to exit app</string>
    <string name="input_correct_wifi_name_pwd">Input correct wifi name password</string>
    <string name="ap_name">Ap name</string>
    <string name="ap_pwd">Ap pwd</string>
    <string name="input_ip_to_search">Input ip to search</string>
    <string name="ready">Ready</string>
    <string name="end">End</string>
    <string name="is_being_initialized">Being initialized</string>
    <string-array name="help_fragment_steps">
        <item>Step One</item>
        <item>Step two</item>
        <item>Step three</item>
        <item>Finish</item>
    </string-array>
    <string-array name="help_fragment_summaries">
        <item>Go to set name</item>
        <item>Connect network</item>
        <item>Pick files</item>
        <item>Ready</item>
    </string-array>

    <string name="connect_wifi">Connect wifi</string>
    <string name="or">or</string>
    <string name="connect_ap">Connect ap</string>

    <!-- TODO(user): replace with your real server client ID -->
    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <!--    <string name="server_client_id" translatable="false">598282183161-ul7qr43dhecie53nshbbcrfcb8k380qg.apps.googleusercontent.com</string>-->

    <string name="tips">Tips</string>
    <string name="watch_ad_acclerator_transfer">Watch an advertisement to speed up file transfer</string>
    <string name="pending">Pending</string>
    <string name="uploading">Uploading</string>
    <string name="downloading">Downloading</string>
    <string name="downloaded">Download Finish</string>
    <string name="not_logged_in">Not logged in</string>
    <string name="login_success">Login success</string>
    <string name="login_failed">Login failed</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="sending">Sending</string>
    <string name="receiving">Receiving</string>
    <string name="enter_6digit_key">Please enter a 6-digit key in another device</string>
    <string name="enter_the_key">Enter the key</string>
    <string name="logout">Logout</string>
    <string name="login_failed_try_again">Login failed, please try again</string>

    <string name="grant_permissions">Grant permissions</string>
    <string name="required_permissions">"Sendby needs access to your storage space. \nRequired"</string>
    <string name="required_permissions_2">"Also allow access\nCamera\nLocation"</string>
    <string name="continue_">Continue</string>
    <string name="quit">Quit</string>
    <string name="login">Login</string>
    <string name="purchase_vip">Purchase VIP</string>
    <string name="remove_ads">Remove ads</string>
    <string name="exit_will_terminate_the_task">Exit now will terminate the task</string>
    <string name="storage_path">Storage path:</string>
    <string name="download_link_copied_to_clipboard">Download link copied to clipboard</string>
    <string name="delete_file">Delete file</string>
    <string name="confirm_delete_file">Confirm delete file?</string>
</resources>
